Bug resolved of shift end log

--- a/force-app/main/default/lwc/shiftEndLogEntries/shiftEndLogEntries.css
+++ b/force-app/main/default/lwc/shiftEndLogEntries/shiftEndLogEntries.css
@@ -158,6 +158,12 @@
     box-shadow: 0 0 0 2px rgba(94, 90, 219, 0.1);
 }
 
+.input-disabled{
+    cursor: not-allowed;
+    pointer-events: all !important;
+    background: #dad4d4;
+}
+
 .clock-status-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
